--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ body {
     
 .kartu-profil img {
     width: 150px;
-    border-radius: 50%; /* Trik untuk membuat gambar persesgi menjadi lingkaran sempurna /* 
+    border-radius: 50%; /* Trik untuk membuat gambar persesgi menjadi lingkaran sempurna */ 
 }
 .kartu-profil {
     /* ... (kode dari slide sebelumnya) ... */
